[package]
name = "Spacy-Trade"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = ["mp3"] }
bevy_egui = "0.38.0"
rand = "0.9.2"
thousands = "0.2.0"

# optimization in the dev profile.
[profile.dev]
opt-level = 3

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
debug = false
opt-level = 3
